# Wind_Prediction_LSDA

./: .python-version  Assignment_1-Tutorial.ipynb  Assignment_1_Template_MLFlow_Project.py  MLproject  Makefile  README.md  pyproject.toml  requirements.txt  run_locally.py
deployment/: MLproject  python_env.yaml
notebooks/: Assignment_1-Tutorial.ipynb  Assignment_1_Template_MLFlow_Project.py  xd.ipynb
references/: README.md  lsda-environment.yml
wind_power/: __init__.py  config.py  dataset.py  features.py  old_features.py  pipelines.py  plots.py  retrain.py  run_locally.py  utils.py
wind_power/modeling/: predict.py  train.py
