[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wind_power"
version = "0.0.1"
description = "Wind Power Estimation"
authors = [
  { name = "Maciej Jalocha" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = "~=3.11.7"

[tool.ruff.lint.isort]
known-first-party = ["wind_power"]
force-sort-within-sections = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable=["ALL"]

